<resources>
    <string name="app_name">Funkner Calculater</string>
    <string name="button_size">20dp</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="clear_button">C</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="subtract_button">-</string>
    <string name="plus_button">+</string>
    <string name="clear_all_button">CA</string>
    <string name="divide_button">/</string>
    <string name="multiply_button">*</string>
    <string name="number_9">9</string>
    <string name="number_8">8</string>
    <string name="number_7">7</string>
    <string name="number_0">0</string>
    <string name="result_button">=</string>
    <string name="defaultValue">0</string>
</resources>