<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="5"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="200dp"
    android:paddingEnd="16dp"
    android:rowCount="5"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/result_text"
    tools:context=".ui.MainActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_columnSpan="5"
        android:background="@color/textResultBg"
        android:gravity="bottom|end"
        android:padding="16dp"
        android:text="@string/defaultValue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/grid_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/number_one"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_1"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_two"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_2"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_three"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_3"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:backgroundTint="@color/buttonBG"
        android:text="@string/clear_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size" />


    <Button
        android:id="@+id/clear_all_button"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:backgroundTint="@color/buttonBG"
        android:text="@string/clear_all_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_four"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_4"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_five"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_5"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_six"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_6"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:backgroundTint="@color/buttonBG"
        android:text="@string/plus_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_subtract"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:backgroundTint="@color/buttonBG"
        android:text="@string/subtract_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_seven"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_7"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_eight"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_8"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_nine"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="@string/number_9"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_multiply"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:backgroundTint="@color/buttonBG"
        android:text="@string/multiply_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_divide"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:backgroundTint="@color/buttonBG"
        android:text="@string/divide_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/number_zero"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/number_0"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/dot_button"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:text="."
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/result_button"
        android:layout_width="@dimen/width_height_button"
        android:layout_height="@dimen/width_height_button"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"
        android:layout_gravity="fill_horizontal"
        android:backgroundTint="@color/buttonBG"
        android:text="@string/result_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"

        />


</GridLayout>
